[package]
name = "ptracer"
version = "0.2.0"
authors = [
    "Bostjan Vesnicer <bostjan.vesnicer@gmail.com>",
    "Simon Wörner <git@simon-woerner.de>"
]
edition = "2018"
description = "Debugger library"
readme = "README.md"
repository = "https://github.com/SWW13/ptracer"
license = "MIT"

[dependencies]
nix = "^0.15"
log = "^0.4"

[dev-dependencies]
goblin = { version = "^0.1.3", default_features=false, features=["std", "endian_fd", "elf32", "elf64"]}
env_logger = "^0.7"