[package]
name = "ptracer"
version = "0.3.2"
authors = [
    "Bostjan Vesnicer <bostjan.vesnicer@gmail.com>",
    "Simon Wörner <git@simon-woerner.de>"
]
edition = "2018"
description = "Debugger library"
readme = "README.md"
repository = "https://github.com/SWW13/ptracer"
license = "MIT"

[dependencies]
libc = "^0.2.72"
nix = "^0.23"
cfg-if = "^0.1"
log = "^0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "^0.11", default-features = false }

[dev-dependencies]
goblin = { version = "^0.1.3", default_features=false, features=["std", "endian_fd", "elf32", "elf64"]}
env_logger = "^0.7"
